--- a/Informe/Secciones/IV3_placa.tex
+++ b/Informe/Secciones/IV3_placa.tex
@@ -2,15 +2,15 @@ Una vez elegidos los componentes y teniendo en cuenta los criterios de ruteo ya 
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.4]{top_color.pdf}
-	\caption{Diseño de PCB.}
+	\includegraphics[width=0.8\textwidth, trim = 2cm 2cm 2cm 2cm]{top_color.pdf}
+	\caption{Diseño de PCB, anverso.}
 	\label{fig.pcb_top}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=0.4]{bottom_color.pdf}
-	\caption{Diseño de PCB.}
+	\includegraphics[width=0.8\textwidth, trim = 2cm 2cm 2cm 2cm]{bottom_color.pdf}
+	\caption{Diseño de PCB, reverso.}
 	\label{fig.pcb_bottom}
 \end{figure}
 
