--- a/Informe/Secciones/VII1_instrumentos.tex
+++ b/Informe/Secciones/VII1_instrumentos.tex
@@ -3,7 +3,7 @@
 
 	\graficarPNG{0.8}{instru_M10SP3010E}{Fuente de alimentación \emph{M10SP3010E}.}{fig:M10SP3010E}
 	\graficarPNG{0.8}{instru_ADS1102CAL}{Osciloscopio \emph{ATTEN ADS1102CAL}.}{fig:ADS1102CAL}
-	\graficarPNG{0.6}{instru_RIGOL_DS1102E}{Osciloscopio \emph{RIGOL DS1102E}.}{fig:RIGOL_DS1102E}
+%	\graficarPNG{0.6}{instru_RIGOL_DS1102E}{Osciloscopio \emph{RIGOL DS1102E}.}{fig:RIGOL_DS1102E}
 	\graficarPNG{0.3}{instru_UT30D}{Multímetro \emph{UT30D}.}{fig:UT30D}
 	\graficarPNG{0.3}{instru_FG_8002}{Generador de funciones \emph{FG 8002}.}{fig:FG_8002}
 	
