--- a/Informe/main.tex
+++ b/Informe/main.tex
@@ -40,14 +40,14 @@
 
 	\part{Diseño conceptual}\label{part:concept}
 
-		\section{Alternativas de diseño}\label{sec:alt}
-			\input{II1_alternativas.tex}
-
 		\section{Diagrama en bloques}\label{sec:bloques}
 			\input{II2_bloques.tex}
 
 		\section{Funcionamiento general}\label{sec:func_gral} % Acá se explican los bloques
 			\input{II3_func_gral.tex}
+
+		\section{Alternativas de diseño}\label{sec:alt}
+			\input{II1_alternativas.tex}
 
 	\part{Diseño y análisis teórico}\label{part:teo}
 		\input{III0_diseno_teo.tex}	% Acá se introduce al cto propuesto y después se analiza
@@ -108,6 +108,7 @@
 		\section{Criterios de Ruteo}\label{sec:ruteo}
 			\input{IV2_ruteo.tex}
 
+		\pagebreak
 		\section{Circuito Impreso}
 			\input{IV3_placa.tex}
 %	\pagebreak
