--- a/Informe/Secciones/II1_alternativas.tex
+++ b/Informe/Secciones/II1_alternativas.tex
@@ -3,7 +3,7 @@
 
 	Por otro lado, para la implementación de los comparadores encargados de la conmutación de las fuentes externas de la etapa de salida clase G alternativa se consideraron amplificadores operaciones y un par diferencial discreto. Los amplificadores operacionales facilitan la implementación del circuito, pero dificulta la producción dada la escasez o falta de provisión de los mismos. La solución es realizar un diseño sencillo con transistores discretos de un par diferencial que a su vez es más ajustable dado que el diseño es propio y se puede personalizar el comparador a la medida de las necesidades del dispositivo.\\
 
-	\Juan{Qué alternativa sería 'Separación de VAS con corriente de polarización de etapa de salida (separada por un capacitor)'?}
+%	\Juan{Qué alternativa sería 'Separación de VAS con corriente de polarización de etapa de salida (separada por un capacitor)'?}
 
 
 %	- Comparadores: utilización de operacionales en vez del par diferencial discreto. Componentes difíciles de conseguir
