--- a/Informe/Secciones/III3_entrada.tex
+++ b/Informe/Secciones/III3_entrada.tex
@@ -1,4 +1,5 @@
 
+\Juan{Completar}
 	\graficarEPS{0.6}{pd}{Comparador de entrada.}{fig:topologia_pd}
 
 	Se propone utilizar el circuito de la Figura \ref{fig:topologia_pd} como comparador de entrada. En un par diferencial, la transconductancia es máxima cuando las $I_C$ son iguales. Para linealizar la respuesta, es decir hacer constante $g_m$ para un mayor rango de entrada, se debe realimentar los emisores del par. Sin embargo con ésto disminuye la ganancia del bloque y empeora la figura del ruido. Para mantener la ganancia deseada pero con alta linealidad, se debe subir la corriente de polarización. Como ventaja del aumento de corriente es el aumento del \emph{slew rate} a costa de un aumento del ruido por la circulación de más corriente.\\
