--- a/Informe/Secciones/III2_vas.tex
+++ b/Informe/Secciones/III2_vas.tex
@@ -1,4 +1,5 @@
 	\graficarEPS{0.6}{vas}{Topología propuesta para la etapa VAS.}{fig:topologia_vas}
+	\Juan{Ojo}
 	Suponinedo una ganancia baja en la primer etapa del circuito implementada como un par diferencial, las capacidades reflejadas por \emph{Miller} son menores implicando constantes de tiempo menores. Asi, ante la gran ganancia de tensión que debe tener la etapa de VAS será la misma que imponga la frecuencia de corte superior de la zona de frecuencias medias.\\
 	\indent Se plantea que el VAS consista en un colector-común seguido de un emisor-común degenerado localmente realimentado todo el VAS por el capacitor $C_{10}$ como se ve en la Figura \ref{fig:topologia_vas}. La ventaja de esta topología es el aumento del beta, implicando un aumento en la ganancia de la etapa. A su vez, una alta ganancia permite una mayor linealización de dicha etapa. Otra ventaja es que al utilizar el colector-común, el emisor-común no extrae mucha corriente del par diferencial ($\beta$-veces menor) desbalanceandolo. Finalmente, la realimentación con $C_{10}$ aumenta la linealidad del VAS como fue dicho previamente pero también mitiga el efecto de las capacidades $C_{\pi}$ de los transistores. Dicho capacitor es el que define el polo dominante y al variar dicho valor, varía la compensación del circuito.\\
 
