Explicacion de rta escalon

--- a/Informe/Secciones/IV1_componentes.tex
+++ b/Informe/Secciones/IV1_componentes.tex
@@ -6,8 +6,8 @@ En las Tablas \ref{tab:lst_tr}, \ref{tab:lst_cap} y \ref{tab:lst_resist} se deta
 		\toprule
 		Código & Nombre & Características & Cantidad \\
 		\midrule
-		\texttt{TIP41C} & Q62, Q63 & NPN & 2 \\
-		\texttt{TIP42C} & Q64, Q65 & PNP & 2 \\ 
+		\texttt{2SC5198} & Q62, Q63 & NPN & 2 \\
+		\texttt{2SA194} & Q64, Q65 & PNP & 2 \\ 
 		\texttt{MJE340} & Q14, Q16, Q26 & NPN & 3 \\
 		\texttt{MJE350} & Q15, Q17 & PNP & 2 \\
 		\texttt{MPSA56} & Q1, Q8, Q9, Q12, Q13, Q27, Q28& PNP   & 7 \\ 
