--- a/Informe/Secciones/V8_thd.tex
+++ b/Informe/Secciones/V8_thd.tex
@@ -16,43 +16,43 @@
 \end{table}
 
 
-\begin{figure}[H]
-	\centering
-	\includegraphics[scale=0.4]{sim_salida1k_max.pdf}
-	\caption{Máxima excursión de salida sin recorte a \SI{1}{\kilo\hertz} $THD = \num{0.018}\%$.}
-	\label{fig:sim_salida_1k_max}
-	\end{figure}
-
-\begin{figure}[H]
-	\centering
-	\includegraphics[scale=0.4]{sim_salida_1k_22V.pdf}
-	\caption{22V, 1V, $THD=\num{0.016}\%$.}
-	\end{figure}
-
-\begin{figure}[H]
-	\centering
-	\includegraphics[scale=0.4]{sim_salida_1k_8V.pdf}
-	\caption{8V, $\SI{.35}{\V}$, $THD=\num{0.005}\%$.}
-\end{figure}
-
-%%%% 20kHz
-\begin{figure}[H]
-	\centering
-	\includegraphics[scale=0.4]{sim_salida_20k_max.pdf}
-	\caption{\SI{26.1}{\V}, \SI{0.35}{\V}, $THD=\num{0.053}\%$.}
-\end{figure}
-
-\begin{figure}[H]
-	\centering
-	\includegraphics[scale=0.4]{sim_salida_20k_22V.pdf}
-	\caption{\SI{22}{\V}, \SI{1}{\V}, $THD=\num{0.066}\%$.}
-\end{figure}
-
-\begin{figure}[H]
-	\centering
-	\includegraphics[scale=0.4]{sim_salida_1k_8V.pdf}
-	\caption{\SI{8}{\V}, \SI{0.35}{\V}, $THD=\num{0.099}\%$.}
-\end{figure}
+%\begin{figure}[H]
+%	\centering
+%	\includegraphics[scale=0.4]{sim_salida1k_max.pdf}
+%	\caption{Máxima excursión de salida sin recorte a \SI{1}{\kilo\hertz} $THD = \num{0.018}\%$.}
+%	\label{fig:sim_salida_1k_max}
+%	\end{figure}
+%
+%\begin{figure}[H]
+%	\centering
+%	\includegraphics[scale=0.4]{sim_salida_1k_22V.pdf}
+%	\caption{22V, 1V, $THD=\num{0.016}\%$.}
+%\end{figure}
+%
+%\begin{figure}[H]
+%	\centering
+%	\includegraphics[scale=0.4]{sim_salida_1k_8V.pdf}
+%	\caption{8V, $\SI{.35}{\V}$, $THD=\num{0.005}\%$.}
+%\end{figure}
+%
+%%%%% 20kHz
+%\begin{figure}[H]
+%	\centering
+%	\includegraphics[scale=0.4]{sim_salida_20k_max.pdf}
+%	\caption{\SI{26.1}{\V}, \SI{0.35}{\V}, $THD=\num{0.053}\%$.}
+%\end{figure}
+%
+%\begin{figure}[H]
+%	\centering
+%	\includegraphics[scale=0.4]{sim_salida_20k_22V.pdf}
+%	\caption{\SI{22}{\V}, \SI{1}{\V}, $THD=\num{0.066}\%$.}
+%\end{figure}
+%
+%\begin{figure}[H]
+%	\centering
+%	\includegraphics[scale=0.4]{sim_salida_1k_8V.pdf}
+%	\caption{\SI{8}{\V}, \SI{0.35}{\V}, $THD=\num{0.099}\%$.}
+%\end{figure}
 
 
 
